Controllers, Commands, Repositories and etc

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+/config/jwt/*
+###< lexik/jwt-authentication-bundle ###
